Mon Feb 22 15:00:11 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Time_Value.{h,cpp}: Reformatted/renamed the code to conform
          to ACE programming guidelines.

Mon Feb 22 13:40:14 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Condition_T.cpp: Changed the mutex() accessor to lock() to
          be consistent.

Mon Feb 22 13:39:09 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Recursive_Thread_Mutex.{h,inl}: Created a new lock() accessor
          so it's consistent with the other synchronizer accessors in ACE.  

Sun Feb 21 21:25:21 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/Time_Value_Test.cpp: Added a test for the new operator<<
          implementation for ACE_Time_Value.  Thanks to Olivier Langlois
          <olivier at olivierlanglois dot net> for contributing this.

Sun Feb 21 21:28:03 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_math.{h,inl}: Added support for floor() and ceiling()
          for long double types.  Thanks to Olivier Langlois <olivier at
          olivierlanglois dot net> for contributing this.
  
        * ace/Time_Value.{h,cpp}: Added support for operator<< and to
          handle long double values better.  Thanks to Olivier Langlois
          <olivier at olivierlanglois dot net> for contributing this.
          This fixes bugid 3818 and 2434.
  
Sun Feb 21 16:28:47 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/Recursive_Condition_Test.cpp: Revised this test so that it
          actually uses the ACE_Condition<> template, like it says in the
          comments..

Sun Feb 21 16:20:35 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Condition_T.cpp (ACE_Condition<MUTEX>::wait): Changed the
          call to mutex_.lock_ to mutex_.mutex() since lock_ is protected.
          Thanks to Nick Meyer <nick dot meyer at sensis dot com> for