@@ -96,8 +96,10 @@ ACE_Condition<MUTEX>::wait (MUTEX &mutex,
 {
 // ACE_TRACE ("ACE_Condition<MUTEX>::wait");
   if (abstime == 0)
+    {
       return ACE_OS::cond_wait (&this->cond_,
                                 &mutex.lock ());
+    }
   else
     {
       ACE_Time_Value tv = *abstime;
